enum PlayerType {
    BATSMAN, BOWLER
}
